force-app/main/default/objects/nFORCE__Feature__mdt/fields/nFORCE__Description__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Description__c</fullName>
    <description>Short paragraph delineating the business processes and capabilities provided in this feature.</description>
    <label>Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>