force-app/main/default/objects/nFORCE__Feature__mdt/fields/nFORCE__Developer_Permitted__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Developer_Permitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the feature can be enabled without additional authorization.</description>
    <label>Developer Permitted</label>
    <type>Checkbox</type>
</CustomField>