force-app/main/default/objects/nFORCE__Feature__mdt/fields/nFORCE__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Boolean which indicates whether a feature is available (true) or unavailable (false) to be installed and configured.</description>
    <label>Is_Active</label>
    <type>Checkbox</type>
</CustomField>