force-app/main/default/objects/nFORCE__Feature__mdt/fields/nFORCE__Terms_Conditions__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Terms_Conditions__c</fullName>
    <description>For your custom feature, enter specific terms &amp; conditions that users must accept to continue.</description>
    <label>Custom Terms &amp; Conditions</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>